--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Dan Moffat",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.7.10"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
