--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hapi/joi": "^16.1.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.10"
   },
   "devDependencies": {
