--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
@@ -30,5 +31,6 @@
   },
   "devDependencies": {
     "node-sass": "^4.13.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
