--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "formik": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -13,8 +12,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "redux-saga": "^1.1.3",
-    "yup": "^0.27.0"
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
