--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/editorjs": "^2.16.1",
+    "@editorjs/header": "^2.3.2",
     "axios": "^0.19.0",
     "formik": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
