--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@editorjs/editorjs": "^2.16.1",
-    "@editorjs/header": "^2.3.2",
     "axios": "^0.19.0",
     "formik": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
@@ -40,7 +38,11 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.13.0"
+    "@editorjs/editorjs": "^2.16.1",
+    "@editorjs/header": "^2.3.2",
+    "@editorjs/paragraph": "^2.6.1",
+    "node-sass": "^4.13.0",
+    "react-editor-js": "^1.4.1"
   },
   "proxy": "http://localhost:5000"
 }
